--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.16",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "@react-native-community/slider": "4.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
