--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/slider": "4.1.12",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.6",
@@ -21,6 +22,7 @@
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "mongoose": "^6.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -32,8 +34,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.16",
-    "styled-components": "^5.3.3",
-    "@react-native-community/slider": "4.1.12"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
