--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.6",
+    "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
@@ -35,7 +36,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.16",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "expo-image-picker": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
