--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-asset": "~8.4.6",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -36,8 +37,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.16",
-    "styled-components": "^5.3.3",
-    "expo-image-picker": "~12.0.1"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
