--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/slider": "4.1.12",
     "@react-native-firebase/app": "^15.0.0",
+    "@react-native-firebase/auth": "^15.1.0",
+    "@react-native-firebase/firestore": "^15.1.0",
     "@react-native-firebase/storage": "^15.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.1",
